changed data directory for geojson files

--- a/index.html
+++ b/index.html
@@ -370,10 +370,10 @@
 
 
 
-    <script src="districts_final.geojson"></script>
-    <script src="s_officeholders.geojson"></script>
-    <script src="county_voters.geojson"></script>
-    <script src="county_officeholders.geojson"></script>
+    <script src="data/districts_final.geojson"></script>
+    <script src="data/s_officeholders.geojson"></script>
+    <script src="data/county_voters.geojson"></script>
+    <script src="data/county_officeholders.geojson"></script>
 
     <script src="./scripts/school_voters.js"></script>
     <script src="./scripts/school_officeholders.js"></script>
