fixed bug when clicking over radio labels

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <select name="bound_select" id="bound_select">
                         <option value="school_officeholders" selected>School board officeholders</option>
                         <option value="school_voters">School board voters</option>
-                        <option value="county_officeholders">County district commissioners</option>
+                        <option value="county_officeholders">County district officeholders</option>
                         <option value="county_voters">County district voters</option>
                     </select>
                 </td>
@@ -94,7 +94,7 @@
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="school-filterradio"
                                 id="school_voters_genders-filter" value="genders" />
-                            <label class="form-check-label tooltip" for="school_voters_gender-filter">
+                            <label class="form-check-label tooltip" for="school_voters_genders-filter">
                                 Gender
                             </label>
                         </div>
@@ -113,20 +113,20 @@
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="school-filterradio"
                                 id="school_officeholders_ages-filter" value="ages" checked />
-                            <label class="form-check-label tooltip" for="school_voters_ages-filter">Ages</label>
+                            <label class="form-check-label tooltip" for="school_officeholders_ages-filter">Ages</label>
                         </div>
 
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="school-filterradio"
                                 id="school_officeholders_genders-filter" value="genders" />
-                            <label class="form-check-label tooltip" for="school_voters_gender-filter">
+                            <label class="form-check-label tooltip" for="school_officeholders_genders-filter">
                                 Gender
                             </label>
                         </div>
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="school-filterradio"
                                 id="school_officeholders_parties-filter" value="parties" />
-                            <label class="form-check-label tooltip" for="school_voters_parties-filter">
+                            <label class="form-check-label tooltip" for="school_officeholders_parties-filter">
                                 Affiliation
                             </label>
                         </div>
@@ -167,20 +167,20 @@
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="county-filterradio"
                                 id="county_officeholders_ages-filter" value="ages" />
-                            <label class="form-check-label tooltip" for="county_voters_ages-filter">Ages</label>
+                            <label class="form-check-label tooltip" for="county_officeholders_ages-filter">Ages</label>
                         </div>
 
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="county-filterradio"
                                 id="county_officeholders_genders-filter" value="genders" />
-                            <label class="form-check-label tooltip" for="county_voters_gender-filter">
+                            <label class="form-check-label tooltip" for="county_officeholders_genders-filter">
                                 Gender
                             </label>
                         </div>
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="county-filterradio"
                                 id="county_officeholders_parties-filter" value="parties" />
-                            <label class="form-check-label tooltip" for="county_voters_parties-filter">
+                            <label class="form-check-label tooltip" for="county_officeholders_parties-filter">
                                 Affiliation
                             </label>
                         </div>
