changed words in sidebar

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                     <select name="bound_select" id="bound_select">
                         <option value="school_officeholders" selected>School board officeholders</option>
                         <option value="school_voters">School board voters</option>
-                        <option value="county_officeholders">County district officeholders</option>
-                        <option value="county_voters">County district voters</option>
+                        <option value="county_officeholders">County commissioners</option>
+                        <option value="county_voters">County commissioner voters</option>
                     </select>
                 </td>
             </tr>
