changed sidebar+fixed attorneys geojson+adjusted colors

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <h3>Oregon Officeholders By County</h3>
                     </div>
                     <div class="map-overlay" id="county_voters_map-title" style='display:none;'>
-                        <h3>Oregon Voters By School District</h3>
+                        <h3>Oregon Voters By County</h3>
                     </div>
                     <div class="map-overlay" id="DA_officeholders_map-title" style='display:none;'>
                         <h3>Oregon District Attorneys</h3>
@@ -59,11 +59,8 @@
 
 
     <div id="mySidenav" class="sidenav">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <div id="company-logo" style='text-align:center;'>
-            <img src="./icon/terrapin.png"
-                    style="width:240px; margin-left:-6px;"/>
-        </div>
+        <!-- <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a> -->
+        
 
         <table style='margin-left:5px;'>
             <tr>
@@ -232,6 +229,13 @@
         <p id='DA_officeholders_description' class='description' style='display:none;'>
             This map shows the officeholders and their demographics (age, gender, political affiliation) for all of Oregon's district attorneys.
         </p>
+
+        
+        <div id="company-logo" style='text-align:center; position:absolute; bottom:60px; left:10px; width:90%'>
+            <label for="company-logo" style='font-size:18px !important;'>Brought to you by</label><br>
+            <img src="./icon/terrapin.png"
+                    style="width:140px; margin-left:0px;"/>
+        </div>
     </div>
 
     <table style="position:absolute; right:3vw; top:60px;">
