--- a/index.html
+++ b/index.html
@@ -68,11 +68,12 @@
                     <label for="cars">Select District</label>
 
                     <select name="bound_select" id="bound_select">
-                        <option value="school_officeholders" selected>School board officeholders</option>
-                        <option value="school_voters">School board voters</option>
-                        <option value="county_officeholders">County commissioners</option>
-                        <option value="county_voters">County commissioner voters</option>
+                        <option value="school_officeholders" selected>School Board Officeholders</option>
+                        <option value="school_voters">School Board Voters</option>
+                        <option value="county_officeholders">County Commissioners</option>
+                        <option value="county_voters">County Commissioner Voters</option>
                         <option value="DA_officeholders">District Attorneys</option>
+                        <option value="county_voters">District Attorney Voters</option>
                     </select>
                 </td>
             </tr>
@@ -231,7 +232,7 @@
         </p>
 
         
-        <div id="company-logo" style='text-align:center; position:absolute; bottom:60px; left:10px; width:90%'>
+        <div id="company-logo">
             <label for="company-logo" style='font-size:18px !important;'>Brought to you by</label><br>
             <img src="./icon/terrapin.png"
                     style="width:140px; margin-left:0px;"/>
