Added labels to counties

--- a/index.html
+++ b/index.html
@@ -441,6 +441,7 @@
     <script src="data/county_voters.geojson"></script>
     <script src="data/county_officeholders.geojson"></script>
     <script src="data/DA_officeholders.geojson"></script>
+    <script src="data/county_labels.geojson"></script>
 
     <script src="./scripts/school_voters.js"></script>
     <script src="./scripts/school_officeholders.js"></script>
